<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="ST_AxisConfig" Id="{c33e54ec-9a6e-4355-a766-c9de0bb337c2}">
    <Declaration><![CDATA[TYPE ST_AxisConfig :
STRUCT
///////Axis Parameters//////
    fOverride               :   LREAL_Ext := (Value := 100.0); //Controller override %
    fMaxVelocity            :   LREAL_Ext;
    fVelocity               :   LREAL_Ext;          //Velocity must be specified, no default used
    fAcceleration           :   LREAL_Ext;          //Not all FBs use, need to change this, 0 is NC default
    fDeceleration           :   LREAL_Ext;
    fPosition               :   LREAL_Ext;          //Used for absolute positioning
    nHomeSeq                :   UINT;               //Homing sequence to perform
    fHomePosition           :   LREAL_Ext;
    fLagError               :   LREAL_Ext;
    fTargetPositionWindow   :   LREAL_Ext;
    fHomingVelocityToCam    :   LREAL_Ext;
    fHomingVelocityFromCam  :   LREAL_Ext;
    fAbsMin                 :   REAL;
    fAbsMax                 :   REAL;
    fUserMin                :   LREAL_Ext;
    fUserMax                :   LREAL_Ext;
    bSoftLimMinEnable       :   BOOL_Ext;
    bSoftLimMaxEnable       :   BOOL_Ext;
    eRestorePosition        :   RestorePosition;    //Restore position of incremental axis after loss of power to the CPU, 0=don't restore, 1=restore but don't home, 2=restore and home
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>